fix project image size on mobile

--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -53,7 +53,7 @@
 	}
 
 	.project-box-img {
-		width: 95%;
+		width: 90%;
 	}
 
 }
